translation-tool/inputs/source_meta/objects/GlobalConfigurationVariable__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Bulk_Update_Devices__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Do you want to bulk update devices.</description>
        <label>Bulk Update Devices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Crypto_Key__c</fullName>
        <label>Crypto Key</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_to_Appeal_Case__c</fullName>
        <label>Days to Appeal Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Resolve_Case_Appeal__c</fullName>
        <label>Days to Resolve Case Appeal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Resolve_Case__c</fullName>
        <label>Days to Resolve Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Device_Data_Delimiter__c</fullName>
        <defaultValue>&quot;|&quot;</defaultValue>
        <description>Device data delimiter.</description>
        <label>Device Data Delimiter</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Data_Tag__c</fullName>
        <defaultValue>&quot;DEVICE#:&quot;</defaultValue>
        <description>Device data Tag used while saving data from the bulk upload of physical locations.</description>
        <inlineHelpText>Device data Tag used while saving data from the bulk upload of physical locations.</inlineHelpText>
        <label>Device Data Tag</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Devices_via_Bulk_Upload__c</fullName>
        <defaultValue>6</defaultValue>
        <description>Number of devices for the creation with bulk upload.</description>
        <inlineHelpText>Number of devices to be created in bulk upload spreadsheet.</inlineHelpText>
        <label>Devices via Bulk Upload</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Physical_Locations_Download__c</fullName>
        <defaultValue>1000</defaultValue>
        <description>Maximum number of Physical Locations configured for the download.</description>
        <inlineHelpText>Maximum number of Physical Locations configured for the download.</inlineHelpText>
        <label>Max Physical Locations Download</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Hours_in_Workday__c</fullName>
        <label>Number of Hours in Workday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PayUEnvironment__c</fullName>
        <label>PayUEnvironment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayUPublicKey__c</fullName>
        <label>PayUPublicKey</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payu_Credit_Card_Classic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payu Credit Card (Classic)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Notification_Alert__c</fullName>
        <defaultValue>60</defaultValue>
        <description>Alert set for the number of days before the sites for an account are eligible for renewal.</description>
        <inlineHelpText>Alert set for the number of days before the sites for an account are eligible for renewal.</inlineHelpText>
        <label>Renewal Notification Alert</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sequence_Generator_Offset__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sequence Generator Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sequence_Generator_Operator_ID__c</fullName>
        <label>Sequence Generator Operator ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_Generator_Problem_Categories__c</fullName>
        <label>Sequence Generator Problem Categories</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_Generator_Year__c</fullName>
        <defaultValue>YEAR(TODAY()) - 2000</defaultValue>
        <label>Sequence Generator Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Com_Login_Url__c</fullName>
        <defaultValue>&quot;http://config3-screening.cs3.force.com/CustomerPortal&quot;</defaultValue>
        <label>Site.Com Login Url</label>
        <type>Url</type>
    </fields>
    <label>Global Configuration Variable</label>
</CustomObject>